<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的活动</string>
    <string name="title1">账号登陆-common</string>
    <string name="yiqiandao">已签到人数</string>
    <string name="yishouchu">已售出门票</string>
    <string name="search">搜索</string>
    <string name="code">二维码签到</string>
    <string name="config">设 置</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name_title">账号：</string>
    <string name="title">登   录</string>
    <string name="call_back">反  馈</string>
    <string name="remember_password">记住我</string>
    <string name="callback_button">意见反馈</string>
    <string name="mess2">V1.0</string>
    <string name="file_title">文件名</string>
    <string name="cancel">取消</string>
    <string name="newfile_title">文件名</string>
    <string name="pass_title">密码：</string>
    <string name="message_inputPass">请输入密码</string>
    <string name="message_login">用户登陆</string>
    <string name="registLogin_login">用户注册</string>
    <string name="bottom">您的活动专家</string>
    <string name="begintime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="status">状态</string>
    <string name="scan">扫描</string>
    <string name="xianzhi">限制入场票的类型</string>
    <string name="qiandao">入场签到</string>
    <string name="qiandao2">签到</string>
    <string name="title_huodong">我的活动</string>
    <string name="title2_huodongtype">活动门票类型</string>
    <string name="title_filter">门票过滤器</string>
    <string name="title_config">签到设置</string>
    <string name="chakan">活动详情查看</string>
    <string name="loginerror">您输入的账号或密码有误,请重新输入</string>

</resources>