<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/homepage_title_height"
        android:background="@drawable/btn_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/titile_gre_ym"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/title_filter"
            android:textColor="@color/white"
            android:textSize="@dimen/title_textsize" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/log"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/log_hig"
                android:background="@drawable/logo" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/shape_corner_gridview"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:id="@+id/name_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/xianzhi"
            android:textColor="@color/black"
            android:textSize="@dimen/tick_type_size2" />

        <ImageView
            android:id="@+id/xianzhiImg"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/my"
            android:onClick="changetype" />
    </LinearLayout>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/title2_huodongtype"
        android:textSize="@dimen/tick_type_size2" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/shape_corner_gridview"
        android:padding="5dip" >

        <ListView
            android:id="@+id/ListView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </RelativeLayout>

</LinearLayout>