<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/homepage_title_height"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/log"
                    android:layout_width="@dimen/log_wid"
                    android:layout_height="@dimen/log_hig"
                    android:background="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/titile_gre_ym"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|center_vertical"
                    android:text="@string/title_huodong"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/savebtn"
                    android:layout_width="@dimen/homepage_btn_wid"
                    android:layout_height="@dimen/homepage_btn_hig"
                    android:background="@drawable/button_png"
                    android:text="@string/app_name" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/ListView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/background_repeat"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/menu_name"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/bottom"
            android:textSize="@dimen/login_bottom_textSize" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:src="@drawable/logo" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:src="@drawable/call" />
    </FrameLayout>

</FrameLayout>