<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <com.ericssonlabs.util.ActionBar
        android:id="@+id/login_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/center_table"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/login_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/login_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/name_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:gravity="center"
                        android:text="@string/name_title"
                        android:textColor="@color/gray2"
                        android:textSize="@dimen/login_textsize3" />

                    <EditText
                        android:id="@+id/inputName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:text="test140103114242328"
                        android:textSize="@dimen/login_textsize2" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/pass_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:gravity="center"
                        android:text="@string/pass_title"
                        android:textColor="@color/gray2"
                        android:textSize="@dimen/login_textsize3" />

                    <EditText
                        android:id="@+id/inputPass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:text="123123"
                        android:textSize="@dimen/login_textsize2" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/remember_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/login_check_mrg_l"
                        android:text="@string/remember_password"
                        android:textColor="@color/gray2"
                        android:textSize="@dimen/login_textsize1" />

                    <TextView
                        android:id="@+id/mess_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/login_check_mrg_l"
                        android:layout_weight="1"
                        android:singleLine="false"
                        android:textColor="@color/orange" 
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/shape_corner_btn"
                        android:paddingBottom="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="5dp"
                        android:text="@string/message_login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/login_textsize3" >
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.ericssonlabs.util.BottomBar
        android:id="@+id/login_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>